--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@fontsource/roboto": "^5.0.8",
-    "@hookform/devtools": "^4.3.1",
     "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -30,10 +29,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.18.0",
+    "remeda": "^1.29.0",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@hookform/devtools": "^4.3.1",
     "@it-incubator/eslint-config": "^1.0.1",
     "@it-incubator/prettier-config": "^0.1.2",
     "@it-incubator/stylelint-config": "^0.1.5",
@@ -57,6 +59,7 @@
     "eslint-plugin-storybook": "^0.6.15",
     "sass": "^1.69.3",
     "storybook": "7.4.6",
+    "storybook-addon-react-router-v6": "^2.0.9",
     "stylelint": "^15.10.3",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
